Fixed the image overflow in project styling

--- a/proj/project.css
+++ b/proj/project.css
@@ -48,6 +48,7 @@
 
             img{
                 max-height: 3em;
+                max-width: 3em;
             }
 
             &:visited{
@@ -110,6 +111,7 @@
 
         img{
             max-height: 40vh;
+            max-width: 100%;
             object-fit: scale-down;
             margin-left: auto;
             margin-right: auto;
